# alliance-pipeline

./: .env.example  .gitignore  AFFILIATE_IDEAS.md  CLAUDE.md  DEVELOPMENT.md  IDEAS.md  Makefile  README.md  docker-compose.yaml  init.sql  pyproject.toml  seed_more_data.sql
config/: default.yaml  secrets.yaml.example
credentials/: credentials.json
db/: 00_base.sql  01_seed_objects.sql  02_seed_creatures.sql  03_bosses.sql  03_encounter.sql  03_seed_bosses.sql  04_vs.sql
docker/: Dockerfile
docs/: 00-project-selection-guide.md  01-ai-shopping-assistant.md  02-price-comparison-bot.md  03-discount-alert-service.md  04-platforms-and-affiliates.md  remotion.md
remotion/: Dockerfile  package-lock.json  package.json  tsconfig.json
scripts/: delete-workflow.sh  export-credentials.sh  export-workflow.sh  import-credentials.sh  pre-commit.sh  run.py  sync-to-n8n.sh  update-workflow.sh
workflows/: 0Rb2NJ6aEsIw1Tyl1j78s.json  0meG1rrwxcY7ulqJ.json  3VVqdyFHZOyyLbgv.json  6_QIukhTW9eKTm9d-j1Lt.json  903ZCytvfLPWUcrf.json  BV3RYH0aViH5Xcto.json  BmGmQNxweuTtZLkr.json  EOzVj6zywlHpSMx0.json  EZ9hMLEAVSKrazyQpqszb.json  Eh9lHCtbEQumgoNJ.json  EkjrqfV3yoJ8clna.json  GV73aWWeQGKx2SUx.json  J8MgW1SpvnChvXIU.json  JdaAIf4dJ8KnOYhjiZB55.json  Nhs2jfOUJcVaRAI3JoE4O.json  OZn9Sax8eKAdDGrGvJhaQ.json  Pt2WHzt31kw0nIxM.json  ShK7FKUMNCnDWcq3EqfAA.json  UTmtH2od4ROyOC0o.json  Vts1rgk1xDFfZoa7.json  ZXNIuIOC0IblNQsF.json  aKaEFczZW4LPetk5.json  alliance-pipeline.json  d1lY1Bnf7yZ2GpFD.json  fRfHqAhRcwwP3lYc.json  fpx1LZeTBazUEn8o.json  ivTPHahRsvF8VUC1.json  jsV0TSoVE7xfB3N3.json  (+6 more)
(+87 files in other folders)
