[project]
name = "alliance-pipeline"
version = "0.1.0"
description = "Extensible automation pipeline for affiliate marketing"
requires-python = ">=3.11"
dependencies = [
    "undetected-chromedriver>=3.5.0",
    "selenium>=4.15.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
]
queue = [
    "aio-pika>=9.0.0",  # RabbitMQ
    "redis>=5.0.0",
]
db = [
    "sqlalchemy>=2.0.0",
    "motor>=3.3.0",  # MongoDB async
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
